--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -3,4 +3,11 @@
     <string name="app_name">AutoCargarArchivos</string>
     <string name="edit_message">Escribir un mensaje</string>
     <string name="button_send">Enviar</string>
+    <string name="hint_hostname">Nombre de host</string>
+    <string name="hint_port">Número de puerto</string>
+    <string name="hint_username">Nombre de usuario</string>
+    <string name="hint_password">Contraseña</string>
+    <string name="button_connect">Conectar</string>
+    <string name="button_select_files">Seleccionar archivos</string>
+    <string name="checkbox_save_settings">Guardar ajustes</string>
 </resources>
