--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,11 @@
     <string name="app_name">AutoUploadFiles</string>
     <string name="edit_message">Enter a message</string>
     <string name="button_send">Send</string>
+    <string name="hint_hostname">Hostname</string>
+    <string name="hint_port">Port</string>
+    <string name="hint_username">Username</string>
+    <string name="hint_password">Password</string>
+    <string name="button_connect">Connect</string>
+    <string name="button_select_files">Select files</string>
+    <string name="checkbox_save_settings">Save settings</string>
 </resources>
